infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo # Docker image
---
# KUBERNETES CLUSTER IP SERVICE (for auth-mongo pod)
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  type: ClusterIP
  selector:
    app: auth-mongo
  ports:
    - name: ddbb
      protocol: TCP
      port: 27017 # Default mongo PORT.
      targetPort: 27017
